--- a/outlines.css
+++ b/outlines.css
@@ -1,9 +1,10 @@
-@font-face {
+@
+font-face {
   font-weight: 400;
   font-family: "Montserrat";
   font-style: normal;
   src: url("fonts/Montserrat-Regular.woff") format("woff");
-}
+i}
 
 @font-face {
   font-weight: 700;
@@ -56,7 +57,7 @@ aside::before {
 }
 
 h1 {
-  font-size: 18px;
+  font-size: 19px;
   background-color: #ffffff;
   border: 2px solid #ff994f;
 }
@@ -130,5 +131,5 @@ aside::before {
 }
 
 nav::before {
-  content: "nav";
-}
+ hcontent: "nav";
+}5
